Bug 648277. Ensure we request a plugin geometry update for a new windowless plugin that may need its visibilty state updated. r=tnikkel